--- a/cv.tex
+++ b/cv.tex
@@ -82,7 +82,7 @@ ItalicFont = Fontin-Italic.otf
 
 %--------------------SECTIONS-----------------------------------
 %Section: Personal Data
-\section{Personal Data}
+%\section{Personal Data}
 
 % \begin{tabular}{rl}
 %     \textsc{Place and Date of Birth:} & Bilbao, Spain  | 01 March 1995 \\
@@ -90,17 +90,18 @@ ItalicFont = Fontin-Italic.otf
 %     \textsc{Phone:}     & +1 (312) 934-8690 \\
 %     \textsc{email:}     & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com}
 % \end{tabular}
-\begin{tabular}{rp{6.0cm}rp{6.0cm}}
-    \textsc{Place and Date of Birth:} & Bilbao, Spain  | 01 March 1995 & \hfill \textsc{Phone:}   & +1 (312) 934-8690\\
-    \textsc{Address:}   &  Chicago, 60613, Illinois & \textsc{Email:}     & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com}
-\end{tabular}
 
+\begin{tabular}{rp{4.0cm}rp{4.0cm}rp{4.0cm}}
+    \textsc{Email:} & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com} & 
+    \textsc{Phone:\newline} & +1 (312) 934-8690 \newline +34 636 837 837  &
+    \textsc{LinkedIn:} &\href{https://www.linkedin.com/in/jjhidalgar/}{jjhidalgar} 
+\end{tabular}
 
 %Section: Education
 \section{Summary}
 \begin{tabular}{rp{13.6cm}}
   \begin{minipage}[t]{1\columnwidth}%
-  Master of Telecommunications Engineering specialized in networking, IT operations and information security. Experienced in real engineering projects. Very confident in leadership and teams management. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.
+  Master of Telecommunications Engineering specialized in networking, IT operations and information security. Experienced in developing and leadering real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.
     \end{minipage}\tabularnewline
 \end{tabular}
 
