--- a/cv.tex
+++ b/cv.tex
@@ -101,7 +101,7 @@ ItalicFont = Fontin-Italic.otf
 \section{Summary}
 \begin{tabular}{rp{13.6cm}}
   \begin{minipage}[t]{1\columnwidth}%
-  Master of Telecommunications Engineering specialized in networking, IT operations and information security. Experienced in developing and leadering real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.
+  Master of Telecommunications Engineering specialized in networking, IT operations and information security. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.
     \end{minipage}\tabularnewline
 \end{tabular}
 
