segunda version buena

--- a/cv.tex
+++ b/cv.tex
@@ -43,7 +43,7 @@
   }%
 \fi
 
-\geometry{left=1.0in, right=1.0in, top=0.6in, bottom=0.6in}
+\geometry{left=1.0in, right=1.0in, top=0.5in, bottom=0.5in}
 
 %Setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -139,7 +139,7 @@ ItalicFont = Fontin-Italic.otf
  \textsc{Aug 2018 - Jul 2019}& \textbf{Master of Information Technology and Management}\\
  & \footnotesize{Illinois Institute of Technology, Chicago} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Major: COMPUTER AND INFORMATION SECURITY \\ &\\
+ & Major: Computer and Information Security\\ &\\
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
  \textsc{Oct 2017 - Jul 2018}& \textbf{Master of Telecommunications Engineering}\\
@@ -150,9 +150,9 @@ ItalicFont = Fontin-Italic.otf
  \textsc{Sep 2013 - Jul 2017}& \textbf{Bachelor's Degree in Telecommunications Engineering}\\
  & \footnotesize{University of the Basque Country, Spain} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Major: Telematics - Computer Science \\
- & Thesis: \emph{``Analysis and implementation of machine learning models in} \\
- & \hspace{12mm}\emph{ real time in Big Data platforms and sensible to Concept Drift}'' 
+ & Major: Telematics - Computer Science 
+%  & Thesis: \emph{``Analysis and implementation of machine learning models in} \\
+%  & \hspace{12mm}\emph{ real time in Big Data platforms and sensible to Concept Drift}'' 
 % & Cumulative \normalsize \textsc{GPA}: 3.82/4
 
 
@@ -166,7 +166,11 @@ ItalicFont = Fontin-Italic.otf
 \begin{tabular}{rp{13.6cm}}
 \textsc{March} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering}\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
 &\footnotesize{Achieved highest promotion score of 10/10} \\&\\
-\textsc{July} 2017 & Honours in Bachelor's Thesis with a score of 10\href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\&\\
+
+\textsc{July} 2017 & Honours in Bachelor's Thesis with a score of 10\href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+& \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
+& \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\&\\
+
 2013 - 2017 & IDOM Prize for the best academic records in Engineering School \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
 &\footnotesize{ Three times awarded the special prize for achieving the highest grades } \\
 \end{tabular}
@@ -180,20 +184,32 @@ ItalicFont = Fontin-Italic.otf
  & Volunteer - Engineer and Teacher \\ 
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
  \vspace{-0.1in}
- \item Non-profit organization for teaching robotics and technology to the public
- \item Developed projects and helped youth get into robotics and computer science 
+ \item Non-profit organization that teaches electronics, robotics, and programming
+ \item Organized multiple courses and volunteered in teaching diverse knowledge areas
+ \item Designed and developed software that helped the organization gain awareness and ease education
 
  \end{itemize}} \\
+
+
 
  \textsc{2016 - 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize Project website}\\
  & Software Engineer \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=40pt,nolistsep]
  \vspace{-0.1in}
  \item Multidisciplinary team hired by city council for reducing noise pollution
- \item Worked on software and noise measurement electronic hardware team
- \item Developed a whole software solution stack for the device  
- \end{itemize}} \\&\\
+ \item Directed the software team and designed a complete solution for the device
+ \item Assisted the hardware team in noise measurement signal processing
+ \item Achieved new technical skills, improved in teamwork and trained myself to work in professional engineering jobs
+ \end{itemize}} \\
 
+ \textsc{}& \textbf{Favorite Personal Projects} \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Developed a free video and music downloader with over 5000 users - Maintained online since 2015
+ \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
+%  \item Programmed a PIC16 microcontroller flasher and memory viewer
+%  \item Designed and developed software that helped the organization gain awareness and ease education
+ \end{itemize}} \\&\\
  
 \end{tabular}
 
@@ -206,7 +222,7 @@ ItalicFont = Fontin-Italic.otf
 \textsc{Programming} & C, Java, Nodejs, Bash, Python, Matlab, Web Stack \\
 \textsc{Technologies} & Networking, Protocols, Linux, Cloud Computing, Kubernetes, Pentesting  \\
 \textsc{Other Knowledge} & Electronics, Signal Processing, Office \\
-\textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating
+\textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, HackTheBox CTF
 \end{tabular}
 
 
