--- a/cv.tex
+++ b/cv.tex
@@ -129,17 +129,17 @@ ItalicFont = Fontin-Italic.otf
 \section{Summary}
 \begin{tabular}{rp{13.6cm}}
   \begin{minipage}[t]{1\columnwidth}%
-  Master of Telecommunications Engineering specialized in networking, DevOps and cybersecurity. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.    \end{minipage}\tabularnewline
+  Master of Telecommunications Engineering specialized in DevOps, cybersecurity and networking. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.    \end{minipage}\tabularnewline
 \end{tabular}
 
 %Section: Education
 \section{Education}
 \begin{tabular}{rp{13.6cm}}
 
- \textsc{Aug 2018 - Jul 2019}& \textbf{Master of Information Technology and Management}\\
+ \textsc{Aug 2018 - Aug 2019}& \textbf{Master of Information Technology and Management}\\
  & \footnotesize{Illinois Institute of Technology, Chicago} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Major: Computer and Information Security\\ &\\
+ & Major: Computer and Information Security | Current GPA: 4.0 \\ &\\
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
  \textsc{Oct 2017 - Jul 2018}& \textbf{Master of Telecommunications Engineering}\\
@@ -165,14 +165,14 @@ ItalicFont = Fontin-Italic.otf
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
 \textsc{March} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering}\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieved highest promotion score of 10/10} \\&\\
+&\footnotesize{Achieving highest promotion score of 10/10} \\&\\
 
-\textsc{July} 2017 & Honours in Bachelor's Thesis with a score of 10\href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+\textsc{July} 2017 & Honors in Bachelor's Thesis with a score of 10\href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
 & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
 & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\&\\
 
-2013 - 2017 & IDOM Prize for the best academic records in Engineering School \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
-&\footnotesize{ Three times awarded the special prize for achieving the highest grades } \\
+2014 - 2018 & IDOM Prize for the best academic records in Engineering School \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
+&\footnotesize{ Four times awarded the special prize for achieving the highest grades (2014, 2016, 2017, 2018)} \\
 \end{tabular}
 
 
@@ -199,13 +199,13 @@ ItalicFont = Fontin-Italic.otf
  \item Multidisciplinary team hired by city council for reducing noise pollution
  \item Directed the software team and designed a complete solution for the device
  \item Assisted the hardware team in noise measurement signal processing
- \item Achieved new technical skills, improved in teamwork and trained myself to work in professional engineering jobs
+ \item Achieved new technical skills, improved in teamwork and trained myself to work in professional engineering environments
  \end{itemize}} \\
 
  \textsc{}& \textbf{Favorite Personal Projects} \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
  \vspace{-0.1in}
- \item Developed a free video and music downloader with over 5000 users - Maintained online since 2015
+ \item Developed a free video and music downloader with over 3000 users - Maintained online since 2015
  \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
 %  \item Programmed a PIC16 microcontroller flasher and memory viewer
 %  \item Designed and developed software that helped the organization gain awareness and ease education
