--- a/cv.tex
+++ b/cv.tex
@@ -119,10 +119,10 @@ ItalicFont = Fontin-Italic.otf
 %     \textsc{email:}     & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com}
 % \end{tabular}
 
-\begin{tabular}{p{1.0cm}p{4.0cm}rp{4.0cm}p{1.5cm}p{4.0cm}}
+\begin{tabular}{p{1.0cm}p{4.0cm}rp{4.0cm}p{1.5cm}}
     \textsc{Email:} & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com} & 
     \textsc{Phone:\newline} & +1 (312) 934-8690 \newline +34 636 837 837  &
-    \textsc{LinkedIn:} \newline \textsc{Github:} & \href{https://www.linkedin.com/in/jjhidalgar/}{jjhidalgar} \newline \href{https://github.com/jaimehrubiks}{jaimehrubiks}
+    \href{https://www.linkedin.com/in/jjhidalgar/}{linkedin.com/in/jjhidalgar} \newline \href{https://github.com/jaimehrubiks}{github.com/jaimehrubiks}
 \end{tabular}
 
 %Section: Education
@@ -164,14 +164,14 @@ ItalicFont = Fontin-Italic.otf
 %Section: Work Experience at the top
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
-\textsc{March} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering}\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+\textsc{March} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
 &\footnotesize{Achieving highest promotion score of 10/10} \\&\\
 
-\textsc{July} 2017 & Honors in Bachelor's Thesis with a score of 10\href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+\textsc{July} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
 & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
 & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\&\\
 
-2014 - 2018 & IDOM Prize for the best academic records in Engineering School \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
+2014 - 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
 &\footnotesize{ Four times awarded the special prize for achieving the highest grades (2014, 2016, 2017, 2018)} \\
 \end{tabular}
 
@@ -180,7 +180,7 @@ ItalicFont = Fontin-Italic.otf
 \section{Experience}
 \begin{tabular}{rp{13.6cm}}
 
- \textsc{2017 - 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize Organization website}\\
+ \textsc{2017 - 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
  & Volunteer - Engineer and Teacher \\ 
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
  \vspace{-0.1in}
@@ -192,7 +192,7 @@ ItalicFont = Fontin-Italic.otf
 
 
 
- \textsc{2016 - 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize Project website}\\
+ \textsc{2016 - 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize www.noise.watch}\\
  & Software Engineer \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=40pt,nolistsep]
  \vspace{-0.1in}
