extended personal projects and achievements

--- a/cv.tex
+++ b/cv.tex
@@ -1,6 +1,7 @@
 % !TeX root = ./cv.tex
 % !TEX program = xelatex
 \documentclass[a4paper,10pt]{article}
+\usepackage{extsizes}
 
 %A Few Useful Packages
 % \usepackage[margin=0.5in]{keometry}
@@ -43,7 +44,7 @@
   }%
 \fi
 
-\geometry{left=1.0in, right=1.0in, top=0.5in, bottom=0.5in}
+\geometry{left=1.0in, right=1.0in, top=0.8in, bottom=0.8in}
 
 %Setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -99,6 +100,8 @@ ItalicFont = Fontin-Italic.otf
 %	\end{textblock}
 %}
 
+
+
 \pagestyle{empty} % non-numbered pages
 
 \font\fb=''[cmr10]'' %for use with \LaTeX command
@@ -119,18 +122,27 @@ ItalicFont = Fontin-Italic.otf
 %     \textsc{email:}     & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com}
 % \end{tabular}
 
-\begin{tabular}{p{1.0cm}p{4.0cm}rp{4.0cm}p{1.5cm}}
+\begin{tabular}{p{1.0cm}p{4.0cm}p{1cm}p{3.8cm}p{1.2cm}}
     \textsc{Email:} & \href{mailto:jjhidalgar@gmail.com}{jjhidalgar@gmail.com} & 
     \textsc{Phone:\newline} & +1 (312) 934-8690 \newline +34 636 837 837  &
     \href{https://www.linkedin.com/in/jjhidalgar/}{linkedin.com/in/jjhidalgar} \newline \href{https://github.com/jaimehrubiks}{github.com/jaimehrubiks}
 \end{tabular}
 
+% %Section: Education
+% \section{Summary}
+% \begin{tabular}{rp{13.6cm}}
+%   \begin{minipage}[t]{1\columnwidth}%
+%   Master of Telecommunications Engineering specialized in DevOps, cybersecurity and networking. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.    \end{minipage}\tabularnewline
+% \end{tabular}
+
+\vspace{.1in}
 %Section: Education
 \section{Summary}
-\begin{tabular}{rp{13.6cm}}
-  \begin{minipage}[t]{1\columnwidth}%
-  Master of Telecommunications Engineering specialized in DevOps, cybersecurity and networking. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization.    \end{minipage}\tabularnewline
+\begin{tabular}{p{15.6cm}}
+  Master of Telecommunications Engineering specialized in DevOps, cybersecurity and networking. Experienced in developing and leading real engineering projects. Seeking to obtain a position in a high challenging engineering environment where my academic skills, experience and creativity will add highest value to the organization. 
 \end{tabular}
+
+\vspace{.1in}
 
 %Section: Education
 \section{Education}
@@ -157,7 +169,7 @@ ItalicFont = Fontin-Italic.otf
 
 
 \end{tabular}
-\vspace{-.3in}
+\vspace{-.15in}
 
 %\begin{tabular}{r|p{11cm}}
 
@@ -171,20 +183,25 @@ ItalicFont = Fontin-Italic.otf
 & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
 & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\&\\
 
+\textsc{July} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors with an excellent \newline academic record and other skills identified and evaluated by university authorities} \\&\\
+% & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
+
 2014 - 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
 &\footnotesize{ Four times awarded the special prize for achieving the highest grades (2014, 2016, 2017, 2018)} \\
 \end{tabular}
 
+\vspace{0.1in}
 
-%Section: Education
+
 \section{Experience}
 \begin{tabular}{rp{13.6cm}}
 
  \textsc{2017 - 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
- & Volunteer - Engineer and Teacher \\ 
+ & Engineer and Teacher \\ 
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
  \vspace{-0.1in}
- \item Non-profit organization that teaches electronics, robotics, and programming
+ \item Non-profit organization of volunteers that teach electronics, robotics, and programming
  \item Organized multiple courses and volunteered in teaching diverse knowledge areas
  \item Designed and developed software that helped the organization gain awareness and ease education
 
@@ -200,29 +217,81 @@ ItalicFont = Fontin-Italic.otf
  \item Directed the software team and designed a complete solution for the device
  \item Assisted the hardware team in noise measurement signal processing
  \item Achieved new technical skills, improved in teamwork and trained myself to work in professional engineering environments
- \end{itemize}} \\
+ \end{itemize}} \\ &\\
 
- \textsc{}& \textbf{Favorite Personal Projects} \\
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
- \vspace{-0.1in}
- \item Developed a free video and music downloader with over 3000 users - Maintained online since 2015
- \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
-%  \item Programmed a PIC16 microcontroller flasher and memory viewer
-%  \item Designed and developed software that helped the organization gain awareness and ease education
- \end{itemize}} \\&\\
+%  \textsc{}& \textbf{Favorite Personal Projects} \\
+%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+%  \vspace{-0.1in}
+%  \item Developed a free video and music downloader with over 3000 users - Maintained online since 2015
+%  \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
+% %  \item Programmed a PIC16 microcontroller flasher and memory viewer
+% %  \item Designed and developed software that helped the organization gain awareness and ease education
+%  \end{itemize}} \\&\\
  
 \end{tabular}
 
- \vspace{-.3in}
+%  \vspace{-.3in}
+
+
+
+%Section: Education
+\section{Personal Projects}
+\begin{tabular}{rp{13.25cm}}
+
+ \textbf{MusicBOO}& Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Developed a free video and music downloader, player and converter
+ \item With over 3000 users, maintained the backend online since 2015
+ \end{itemize}} \\
+
+ \textbf{YarHarPictor}& PIC16 ROM Flasher \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
+ \item Adopted by university microcontroller course to assist students implementing their programs
+ \end{itemize}} \\
+
+ \textbf{notMAIL}& Message and Notifications delivery protocol \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Invented an email replacement focused on notifications managed by user controlled subscriptions
+ \item Designed the protocol specification and communications API
+ \item Programmed multiple API libraries for different languages
+ \item Implemented a server node and two independent clients (webapp and Raspberry PI)
+ \end{itemize}} \\
+
+ \textbf{LeagueInfo}& Online game players tracker \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Created a League of Legends' players online tracker with a notification system
+ \item Allowed to spectate games when that feature was not available in the official client
+ \end{itemize}} \\
+
+ \textbf{SSM}& Server management tool for sysadmins (university course project)\\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Facilitates reporting multiple servers or IOT devices' status from a central platform 
+ \item Allows to send batch commands and gather information from a list of servers
+ \end{itemize}} \\
+
+ \textbf{musicBOT}& Two wheel programmable robot\\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+ \vspace{-0.1in}
+ \item Designed a programmable (numeric pad and twitter) two wheel robot based on a PIC16
+ \item Participated with a workmate in designing from scatch a 3d printable chassis
+ \end{itemize}} \\
+
+\end{tabular}
 
 %Section: Scholarships and additional info
 \section{Skills}
 \begin{tabular}{r|l}
 \textsc{Languages} & Spanish, English, Basque, French (Basic) \\
 \textsc{Programming} & C, Java, Nodejs, Bash, Python, Matlab, Web Stack \\
-\textsc{Technologies} & Networking, Protocols, Linux, Cloud Computing, Kubernetes, Pentesting  \\
+\textsc{Technologies} & Networking, Linux, Cloud Computing, Kubernetes, Pentesting, Blockchain  \\
 \textsc{Other Knowledge} & Electronics, Signal Processing, Office \\
-\textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, HackTheBox CTF
+\textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, Lan Parties
 \end{tabular}
 
 
