matriculas de honor

--- a/cv.tex
+++ b/cv.tex
@@ -165,7 +165,7 @@ ItalicFont = Fontin-Italic.otf
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
 \textsc{March} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieving highest promotion score of 10/10} \\&\\
+&\footnotesize{Achieving highest promotion score of 10/10. Obtained special honors in 18 courses.} \\&\\
 
 \textsc{July} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
 & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
