--- a/cv.tex
+++ b/cv.tex
@@ -220,7 +220,7 @@ ItalicFont = Fontin-Italic.otf
 \begin{tabular}{r|l}
 \textsc{Languages} & Spanish, English, Basque, French (Basic) \\
 \textsc{Programming} & C, Java, Nodejs, Bash, Python, Matlab, Web Stack \\
-\textsc{Technologies} & Networking, Protocols, Linux, Cloud Computing, Kubernetes, Pentesting  \\
+\textsc{Technologies} & Networking, Linux, Cloud Computing, Kubernetes, Pentesting, Blockchain  \\
 \textsc{Other Knowledge} & Electronics, Signal Processing, Office \\
 \textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, HackTheBox CTF
 \end{tabular}
